@@ -2,12 +2,12 @@
 	<parent>
 		<groupId>de.intranda.goobi.workflow</groupId>
 		<artifactId>goobi-core</artifactId>
-		<version>21.02.3-SNAPSHOT</version>
+		<version>21.06.7-SNAPSHOT</version>
 	</parent>
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>de.intranda.goobi.workflow</groupId>
 	<artifactId>goobi-core-jar</artifactId>
-	<version>21.02.3-SNAPSHOT</version>
+	<version>21.06.7-SNAPSHOT</version>
 	<packaging>jar</packaging>
 	
 	<build>
@@ -36,7 +36,9 @@
 				<configuration>
 					<source>1.8</source>
 					<target>1.8</target>
+
 				</configuration>
+                
 			</plugin>
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
@@ -53,6 +55,7 @@
                             <value>src/test/resources/log4j2.test.xml</value>
                         </property>
                     </systemProperties>                    
+                    <argLine>--add-exports java.base/jdk.internal.loader=ALL-UNNAMED</argLine>
                 </configuration>
 
 			</plugin>
